[project]
name = "pysaber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "logfire>=3.21.1",
    "networkx>=3.5",
    "polars>=1.31.0",
    "pydantic>=2.11.7",
    "pyiter>=0.13.6",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
    "twine>=6.1.0",
]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true
